3656.	[bug]		Treat a all zero netmask as invalid when generating
			the localnets acl. [RT #34687]

3655.	[cleanup]	Simplify TCP message processing when requesting a
			zone transfer.  [RT #34825]

3654.	[bug]		Address race condition with manual notify requests.
			[RT #34806]

3653.	[func]		Create delegations for all "children" of empty zones
			except "forward first". [RT #34826]

3651.	[tuning]	Adjust when a master server is deemed unreachable.
			[RT #27075]

3650.	[tuning]	Use separate rate limiting queues for refresh and
			notify requests. [RT #30589]

3648.	[test]		Updated the ATF test framework to version 0.17.
			[RT #25627]

3646.	[bug]		Journal filename string could be set incorrectly,
			causing garbage in log messages. [RT #34738]

3645.	[protocol]	Use case sensitive compression when responding to
			queries. [RT #34737]

3644.	[protocol]	Check that EDNS subnet client options are well formed.
			[RT #34718]

3641.	[bug]		Handle changes to sig-validity-interval settings
			better. [RT #34625]

3640.	[bug]		ndots was not being checked when searching.  Only
			continue searching on NXDOMAIN responses.  Add the
			ability to specify ndots to nslookup. [RT #34711]

	--- 9.6-ESV-R10 released ---

3638.	[cleanup]	Add the ability to handle ENOPROTOOPT in case it is
			encountered. [RT #34668]

	--- 9.6-ESV-R10rc2 released ---

3637.	[bug]		'allow-query-on' was checking the source address
			rather than the destination address. [RT #34590]

3636.	[bug]		Automatic empty zones now behave better with
			forward only "zones" beneath them. [RT #34583]

3634.	[func]		Report build-id in rndc status. Report build-id
			when building from a git repository. [RT #20422]

3633.	[cleanup]	Refactor OPT processing in named to make it easier
			to support new EDNS options. [RT #34414]

3631.	[bug]		Remove spurious warning about missing signatures when
			qtype is SIG. [RT #34600]

3630.	[bug]		Ensure correct ID computation for MD5 keys. [RT #33033]
